<resources>
    <string name="app_name">Simple Music</string>
    <string name="songs">Songs</string>
    <string name="play">Play Music</string>
    <string name="Library">Library</string>
    <string name="Playbutton">Play</string>
    <string name="Np">NOW PLAYING </string>
    <string name="SS">SAMPLE SONG</string>
    <string name="SA">SAMPLE ALBUM</string>
    <string name="SAA">SAMPLE ARTIST</string>
    <string name="NowPlay">Now Playing</string>


</resources>
