<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbckl">


    <TextView
        android:id="@+id/TV_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif-monospace"
        android:text="@string/Np"
        android:textSize="50sp" />


    <RelativeLayout

        android:id="@+id/rtv_np"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_Heading"
        android:layout_marginTop="20dp"
        android:background="@color/colorbckl">

        <ImageView
            android:id="@+id/img_ds"
            android:layout_width="99dp"
            android:layout_height="105dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/Playbutton"
            android:src="@drawable/ic_play_button" />


        <TextView

            android:id="@+id/tv_songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_toEndOf="@id/img_ds"
            android:layout_toRightOf="@id/img_ds"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/SS"
            tools:ignore="MissingConstraints" />

        <TextView

            android:id="@+id/tv_albumName"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_below="@id/tv_songName"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="36dp"
            android:layout_toEndOf="@id/img_ds"
            android:layout_toRightOf="@id/img_ds"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="5dp"
            android:text="@string/SA" />

        <TextView

            android:id="@+id/tv_artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_albumName"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="71dp"
            android:layout_toEndOf="@id/img_ds"
            android:layout_toRightOf="@id/img_ds"
            android:padding="5dp"
            android:text="@string/SAA" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_NP_lib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rtv_np"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/Library" />
</RelativeLayout>